--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,9 +39,11 @@ list(APPEND LINKLIBS Threads::Threads)
 include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 
 # Library
+file(GLOB_RECURSE HEADER_FILES "include/*.h")
+file(GLOB_RECURSE INLINE_FILES "include/*.inl")
 file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
 set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-add_library(cppbenchmark ${SOURCE_FILES})
+add_library(cppbenchmark ${HEADER_FILES} ${INLINE_FILES} ${SOURCE_FILES})
 target_include_directories(cppbenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(cppbenchmark ${LINKLIBS} cpp-optparse HdrHistogram)
 set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
@@ -52,12 +54,14 @@ list(APPEND LINKLIBS cppbenchmark)
 if(NOT CPPBENCHMARK_MODULE)
 
   # Examples
-  file(GLOB EXAMPLE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.cpp")
-  foreach(EXAMPLE_FILE ${EXAMPLE_FILES})
-    string(REGEX REPLACE "(.*)\\.cpp" "\\1" EXAMPLE_NAME ${EXAMPLE_FILE})
+  file(GLOB EXAMPLE_HEADER_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.h")
+  file(GLOB EXAMPLE_INLINE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.inl")
+  file(GLOB EXAMPLE_SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.cpp")
+  foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
+    string(REGEX REPLACE "(.*)\\.cpp" "\\1" EXAMPLE_NAME ${EXAMPLE_SOURCE_FILE})
     set(EXAMPLE_TARGET "cppbenchmark-example-${EXAMPLE_NAME}")
-    set_source_files_properties(examples/${EXAMPLE_FILE} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-    add_executable(${EXAMPLE_TARGET} examples/${EXAMPLE_FILE})
+    set_source_files_properties(examples/${EXAMPLE_SOURCE_FILE} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
+    add_executable(${EXAMPLE_TARGET} ${EXAMPLE_HEADER_FILES} ${EXAMPLE_INLINE_FILES} examples/${EXAMPLE_SOURCE_FILE})
     target_link_libraries(${EXAMPLE_TARGET} ${LINKLIBS})
     set_target_properties(${EXAMPLE_TARGET} PROPERTIES FOLDER examples)
     list(APPEND INSTALL_TARGETS ${EXAMPLE_TARGET})
@@ -65,9 +69,11 @@ if(NOT CPPBENCHMARK_MODULE)
   endforeach()
 
   # Tests
+  file(GLOB TESTS_HEADER_FILES "tests/*.h")
+  file(GLOB TESTS_INLINE_FILES "tests/*.inl")
   file(GLOB TESTS_SOURCE_FILES "tests/*.cpp")
   set_source_files_properties(${TESTS_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-  add_executable(cppbenchmark-tests ${TESTS_SOURCE_FILES})
+  add_executable(cppbenchmark-tests ${TESTS_HEADER_FILES} ${TESTS_INLINE_FILES} ${TESTS_SOURCE_FILES} ${Catch2})
   target_include_directories(cppbenchmark-tests PRIVATE ${Catch2})
   target_link_libraries(cppbenchmark-tests ${LINKLIBS})
   set_target_properties(cppbenchmark-tests PROPERTIES FOLDER tests)
