--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,11 +39,11 @@ list(APPEND LINKLIBS Threads::Threads)
 include_directories(SYSTEM "${CMAKE_CURRENT_SOURCE_DIR}/modules")
 
 # Library
-file(GLOB_RECURSE HEADER_FILES "include/*.h")
-file(GLOB_RECURSE INLINE_FILES "include/*.inl")
-file(GLOB_RECURSE SOURCE_FILES "source/*.cpp")
-set_source_files_properties(${SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
-add_library(cppbenchmark ${HEADER_FILES} ${INLINE_FILES} ${SOURCE_FILES})
+file(GLOB_RECURSE LIB_HEADER_FILES "include/*.h")
+file(GLOB_RECURSE LIB_INLINE_FILES "include/*.inl")
+file(GLOB_RECURSE LIB_SOURCE_FILES "source/*.cpp")
+set_source_files_properties(${LIB_SOURCE_FILES} PROPERTIES COMPILE_FLAGS "${PEDANTIC_COMPILE_FLAGS}")
+add_library(cppbenchmark ${LIB_HEADER_FILES} ${LIB_INLINE_FILES} ${LIB_SOURCE_FILES})
 target_include_directories(cppbenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(cppbenchmark ${LINKLIBS} cpp-optparse HdrHistogram)
 set_target_properties(cppbenchmark PROPERTIES FOLDER libraries)
@@ -54,8 +54,8 @@ list(APPEND LINKLIBS cppbenchmark)
 if(NOT CPPBENCHMARK_MODULE)
 
   # Examples
-  file(GLOB EXAMPLE_HEADER_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.h")
-  file(GLOB EXAMPLE_INLINE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.inl")
+  file(GLOB EXAMPLE_HEADER_FILES "examples/*.h")
+  file(GLOB EXAMPLE_INLINE_FILES "examples/*.inl")
   file(GLOB EXAMPLE_SOURCE_FILES RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/examples" "examples/*.cpp")
   foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
     string(REGEX REPLACE "(.*)\\.cpp" "\\1" EXAMPLE_NAME ${EXAMPLE_SOURCE_FILE})
