--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ matrix:
             - llvm-toolchain-xenial-8
           packages:
             - clang-8
+            - libstdc++-8-dev
             - cmake
             - doxygen
             - graphviz
