--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Temporary directories
 .idea
+bin/*
+!bin/.gitignore
 build
 cmake
 cmake-build-*
-modules
+modules/*
+!modules/CMakeLists.txt
+!modules/*.cmake
 temp
 
 # Ctags files
