--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,8 +17,8 @@ only_commits:
 environment:
   matrix:
     - type: Cygwin
-      build: C:\acygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
-      command: C:\acygwin64\bin\bash -lc
+      build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
+      command: C:\cygwin64\bin\bash -lc
     - type: MinGW
       build: call mingw.bat
       command: cmd /C
@@ -35,9 +35,10 @@ install:
   # Chocolatey
   - choco upgrade chocolatey
   # Cygwin
-  - if "%type%"=="Cygwin" if not exist "C:\acygwin64" mkdir "C:\acygwin64"
-  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\acygwin64\setup-x86_64.exe"
-  - if "%type%"=="Cygwin" C:\acygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\acygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,libjsoncpp19,librhash0,libuv1
+  - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
+  - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
+#  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --local-package-dir "C:\cache\cygwin" --packages cmake,automake,make,gcc-core,gcc-g++,libjsoncpp19,librhash0,libuv1
+  - if "%type%"=="Cygwin" C:\cygwin64\setup-x86_64.exe --quiet-mode --no-shortcuts --upgrade-also --root "C:\cygwin64" --packages cmake,automake,make,gcc-core,gcc-g++,libjsoncpp19,librhash0,libuv1
   # MinGW
   - if "%type%"=="MinGW" if not exist "C:\mingw.7z" appveyor-retry appveyor DownloadFile "http://downloads.sourceforge.net/mingw-w64/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z" -FileName "C:\mingw.7z"
   - if "%type%"=="MinGW" 7z x -y -oC:\ "C:\mingw.7z" > nul
