--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 # Programming language definition
 language: cpp
 
+# OS environment
+dist: bionic
+
 # Build matrix (OS, compiler)
 matrix:
   include:
@@ -43,10 +46,6 @@ matrix:
       compiler: clang
       env: OS=osx COMPILER=clang
       osx_image: xcode10.2
-
-# OS environment
-sudo: required
-dist: xenial
 
 # Branches to build
 branches:
