--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
       env: OS=linux COMPILER=gcc GCC_VERSION=9
       addons:
         apt:
+          sources:
+            - ppa:ubuntu-toolchain-r/test
           packages:
             - gcc-9
             - g++-9
@@ -32,6 +34,7 @@ matrix:
       addons:
         apt:
           sources:
+            - ppa:ubuntu-toolchain-r/test
             - llvm-toolchain-bionic-8
           packages:
             - clang-8
