--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ppa:ubuntu-toolchain-r/test
+            - sourceline: 'ppa:ubuntu-toolchain-r/test'
           packages:
             - gcc-9
             - g++-9
@@ -34,8 +34,8 @@ matrix:
       addons:
         apt:
           sources:
-            - ppa:ubuntu-toolchain-r/test
-            - llvm-toolchain-bionic-8
+            - sourceline: 'ppa:ubuntu-toolchain-r/test'
+            - sourceline: 'llvm-toolchain-bionic-8'
           packages:
             - clang-8
             - libstdc++-8-dev
