--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,9 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-bionic-9
+            - sourceline: 'ppa:ubuntu-toolchain-r/test'
+            - sourceline: 'deb http://apt.llvm.org/bionic/llvm-toolchain-bionic-9 main'
+              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
             - clang-9
             - libstdc++-9-dev
