--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,12 @@ matrix:
         apt:
           sources:
             - sourceline: 'ppa:ubuntu-toolchain-r/test'
-            - sourceline: 'deb http://apt.llvm.org/bionic/llvm-toolchain-bionic-9 main'
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+            - sourceline: 'deb http://apt.llvm.org/bionic/llvm-toolchain-bionic-9 main' 
+                key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
             - clang-9
-            - libstdc++-9-dev
+            - libc++-9-dev
+            - libc++abi-9-dev
             - cmake
             - doxygen
             - graphviz
