--- a/.travis.yml
+++ b/.travis.yml
@@ -30,17 +30,16 @@ matrix:
     - name: "Linux (Clang compiler)"
       os: linux
       compiler: clang
-      env: OS=linux COMPILER=clang CLANG_VERSION=9
+      env: OS=linux COMPILER=clang CLANG_VERSION=10
       addons:
         apt:
           sources:
             - sourceline: 'ppa:ubuntu-toolchain-r/test'
-            - sourceline: 'deb http://apt.llvm.org/bionic/llvm-toolchain-bionic-9 main' 
+            - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic main'
               key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
-            - clang-9
-            - libc++-9-dev
-            - libc++abi-9-dev
+            - clang-10
+            - libstdc++-10-dev
             - cmake
             - doxygen
             - graphviz
