--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: cpp
 
 # OS environment
-dist: bionic
+dist: focal
 
 # Build matrix (OS, compiler)
 matrix:
@@ -35,8 +35,6 @@ matrix:
         apt:
           sources:
             - sourceline: 'ppa:ubuntu-toolchain-r/test'
-            - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
           packages:
             - clang-10
             - cmake
@@ -52,7 +50,7 @@ matrix:
       os: osx
       compiler: clang
       env: OS=osx COMPILER=clang
-      osx_image: xcode11.4
+      osx_image: xcode12u
 
 # Branches to build
 branches:
