--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,15 +16,18 @@ only_commits:
 # Build matrix
 environment:
   matrix:
-    - type: Cygwin
-      build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
-      command: C:\cygwin64\bin\bash -lc
-    - type: MinGW
-      build: call mingw.bat
-      command: cmd /C
-    - type: VisualStudio
-      build: call vs.bat
-      command: cmd /C
+#    - type: Cygwin
+#      build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./unix.sh"
+#      command: C:\cygwin64\bin\bash -lc
+    - type: MSYS2
+#      build: C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./unix.sh"
+#      command: cmd /C
+#    - type: MinGW
+#      build: call mingw.bat
+#      command: cmd /C
+#    - type: VisualStudio
+#      build: call vs.bat
+#      command: cmd /C
 
 # Allow to fail on first error in matrix
 matrix:
