--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,15 @@ jobs:
     # Build matrix (Linux, MacOS, Windows)
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        - { name: "Linux (GCC)", os: ubuntu-latest, toolchain: "gcc" }
+        - { name: "Linux (Clang)", os: ubuntu-latest, toolchain: "clang"}
+        - { name: "MacOS", os: macos-latest, toolchain: "clang" }
+        - { name: "Windows (Visual Studio)", os: windows-latest, toolchain: "msvc" }
+        - { name: "Windows (MinGW)", os: windows-latest, toolchain: "mingw" }
+        - { name: "Windows (Cygwin)", os: windows-latest, toolchain: "cygwin" }
 
-    runs-on: ${{ matrix.os }}
+    name: ${ {matrix.config.name} }
+    runs-on: ${ {matrix.config.os} }
 
     steps:
       - name: Display CMake version
