Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,36 @@ jobs:
     # Build matrix (Linux, MacOS, Windows)
     strategy:
       matrix:
-        - { name: "Linux (GCC)", os: ubuntu-latest, toolchain: "gcc" }
-        - { name: "Linux (Clang)", os: ubuntu-latest, toolchain: "clang"}
-        - { name: "MacOS", os: macos-latest, toolchain: "clang" }
-        - { name: "Windows (Visual Studio)", os: windows-latest, toolchain: "msvc" }
-        - { name: "Windows (MinGW)", os: windows-latest, toolchain: "mingw" }
-        - { name: "Windows (Cygwin)", os: windows-latest, toolchain: "cygwin" }
+        - { 
+            name: "Linux (GCC)"
+            os: ubuntu-latest
+            toolchain: "gcc" 
+          }
+        - { 
+            name: "Linux (Clang)"
+            os: ubuntu-latest
+            toolchain: "clang"
+          }
+        - { 
+            name: "MacOS"
+            os: macos-latest
+            toolchain: "clang" 
+          }
+        - { 
+            name: "Windows (Visual Studio)"
+            os: windows-latest
+            toolchain: "msvc" 
+          }
+        - { 
+            name: "Windows (MinGW)"
+            os: windows-latest
+            toolchain: "mingw" 
+          }
+        - { 
+            name: "Windows (Cygwin)"
+            os: windows-latest
+            toolchain: "cygwin" 
+          }
 
     name: ${ {matrix.config.name} }
     runs-on: ${ {matrix.config.os} }
