Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,9 @@ jobs:
   build:
     # Build matrix (Linux, MacOS, Windows)
     strategy:
+      fail-fast: false
       matrix:
+        config:
         - { 
             name: "Linux (GCC)"
             os: ubuntu-latest
