Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,5 +74,7 @@ jobs:
           CC: gcc
           CXX: g++
         run: |
-          cd build
-          ./unix.sh
+          echo ${{ matrix.os }}
+          echo ${{ matrix.toolchain }}
+#          cd build
+#          ./unix.sh
