Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,17 +58,15 @@ jobs:
       # gil
       - name: "Setup gil tool"
         run: |
-#          pip3 install gil
-#          gil update
+          pip3 install gil
+          gil update
 
       # Build step: Linux (GCC)
       - name: "Build step: Linux (GCC)"
-#        if: startsWith(matrix.os, 'ubuntu') && matrix.toolchain == 'gcc'
+        if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'gcc')
         env:
           CC: gcc
           CXX: g++
         run: |
-          echo ${{matrix.os}}
-          echo ${{matrix.toolchain}}
-#          cd build
-#          ./unix.sh
+          cd build
+          ./unix.sh
