--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,10 @@ jobs:
         - name: "Linux (GCC)"
           os: ubuntu-latest
           toolchain: gcc
-          version: 11
         # Linux with clang toolchain
         - name: "Linux (Clang)"
           os: ubuntu-latest
           toolchain: clang
-          version: 12
         # MacOS with clang toolchain
         - name: "MacOS"
           os: macos-latest
@@ -53,13 +51,6 @@ jobs:
       # git checkout
       - uses: actions/checkout@v2
 
-      # gcc, clang
-      - name: "Setup gcc, clang"
-        if: startsWith(matrix.os, 'ubuntu')
-        run: |
-          sudo apt update
-          sudo apt install gcc-11 clang-12
-
       # cmake
       - name: "Setup cmake"
         run: cmake --version
@@ -73,9 +64,7 @@ jobs:
       # Build step: Linux (GCC)
       - name: "Build step: Linux (GCC)"
         if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'gcc')
-        env:
-          CC: gcc-${{ matrix.version }}
-          CXX: g++-${{ matrix.version }}
+        uses: egor-tensin/setup-gcc@v1
         run: |
           cd build
           ./unix.sh
@@ -83,9 +72,7 @@ jobs:
       # Build step: Linux (Clang)
       - name: "Build step: Linux (Clang)"
         if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'clang')
-        env:
-          CC: clang-${{ matrix.version }}
-          CXX: clang++-${{ matrix.version }}
+        uses: egor-tensin/setup-clang@v1
         run: |
           cd build
           ./unix.sh
