--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,16 @@ jobs:
       # git checkout
       - uses: actions/checkout@v2
 
+      # gcc
+      - name: "Setup gcc"
+        if: matrix.toolchain == 'gcc'
+        uses: egor-tensin/setup-gcc@v1
+
+      # clang
+      - name: "Setup clang"
+        if: matrix.toolchain == 'clang'
+        uses: egor-tensin/setup-clang@v1
+
       # cmake
       - name: "Setup cmake"
         run: cmake --version
@@ -64,7 +74,6 @@ jobs:
       # Build step: Linux (GCC)
       - name: "Build step: Linux (GCC)"
         if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'gcc')
-        uses: egor-tensin/setup-gcc@v1
         run: |
           cd build
           ./unix.sh
@@ -72,7 +81,6 @@ jobs:
       # Build step: Linux (Clang)
       - name: "Build step: Linux (Clang)"
         if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'clang')
-        uses: egor-tensin/setup-clang@v1
         run: |
           cd build
           ./unix.sh
