Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,11 +55,17 @@ jobs:
       - name: "Setup gcc"
         if: matrix.toolchain == 'gcc'
         uses: egor-tensin/setup-gcc@v1
+        with:
+          version: 11
+          platform: x64
 
       # clang
       - name: "Setup clang"
         if: matrix.toolchain == 'clang'
         uses: egor-tensin/setup-clang@v1
+        with:
+          version: 13
+          platform: x64
 
       # cmake
       - name: "Setup cmake"
