--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
         if: matrix.toolchain == 'gcc'
         uses: egor-tensin/setup-gcc@v1
         with:
-          version: 11
+          version: latest
           platform: x64
 
       # clang
@@ -64,7 +64,7 @@ jobs:
         if: matrix.toolchain == 'clang'
         uses: egor-tensin/setup-clang@v1
         with:
-          version: 13
+          version: latest
           platform: x64
 
       # cmake
