Update GitHub build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,3 +90,10 @@ jobs:
         run: |
           cd build
           ./unix.sh
+
+      # Build step: MacOS
+      - name: "Build step: MacOS"
+        if: startsWith(matrix.os, 'macos')
+        run: |
+          cd build
+          ./unix.sh
