--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
       # clang
       - name: "Setup clang"
         if: startsWith(matrix.os, 'ubuntu') && (matrix.toolchain == 'clang')
+        uses: egor-tensin/setup-clang@v1
         with:
           version: 13
           platform: x64
