--- a/.github/workflows/build-linux-gcc.yml
+++ b/.github/workflows/build-linux-gcc.yml
@@ -1,4 +1,4 @@
-name: Build Linux (GCC)
+name: Linux (GCC)
 
 on:
   push:
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build:
-    name: "Linux (GCC)"
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
 
