--- a/.github/workflows/build-windows-mingw.yml
+++ b/.github/workflows/build-windows-mingw.yml
@@ -1,4 +1,4 @@
-name: Windows (Visual Studio)
+name: Windows (MinGW)
 
 on:
   push:
@@ -7,14 +7,14 @@ on:
 
 jobs:
   build:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Setup Visual Studio"
-        uses: microsoft/setup-msbuild@v1.1
+      - name: "Setup MinGW"
+        uses: egor-tensin/setup-mingw@v2
         with:
-          msbuild-architecture: x64
+          platform: x64
 
       - name: "Setup cmake"
         run: cmake --version
@@ -27,4 +27,4 @@ jobs:
       - name: "Build"
         run: |
           cd build
-          ./vs.bat
+          ./mingw.bat
