--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -1,4 +1,4 @@
-name: Linux (gcc)
+name: Windows (Cygwin)
 
 on:
   push:
@@ -7,15 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Setup gcc"
-        uses: egor-tensin/setup-gcc@v1
+      - name: "Setup MinGW"
+        uses: egor-tensin/setup-cygwin@v3
         with:
-          version: 11
           platform: x64
+          packages: cmake gcc-g++
 
       - name: "Setup cmake"
         run: cmake --version
