--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -11,21 +11,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: "Setup MinGW"
+      - name: "Setup Cygwin"
         uses: egor-tensin/setup-cygwin@v3
         with:
           platform: x64
           packages: cmake gcc-g++
 
       - name: "Setup cmake"
+        shell: C:\tools\cygwin\bin\bash -lc '{0}'
         run: cmake --version
 
       - name: "Setup gil tool"
+        shell: C:\tools\cygwin\bin\bash -lc '{0}'
         run: |
           pip3 install gil
           gil update
 
       - name: "Build"
+        shell: C:\tools\cygwin\bin\bash -lc '{0}'
         run: |
           cd build
           ./unix.sh
