Update GitHub build action

--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
     steps:
       - uses: actions/checkout@v2
 
@@ -18,17 +21,14 @@ jobs:
           packages: cmake gcc-g++
 
       - name: "Setup cmake"
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
         run: cmake --version
 
       - name: "Setup gil tool"
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
         run: |
           pip3 install gil
           gil update
 
       - name: "Build"
-        shell: C:\tools\cygwin\bin\bash.exe --login --norc -eo pipefail -o igncr '{0}'
         run: |
           cd build
           ./unix.sh
