Update GitHub build action

--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -24,6 +24,7 @@ jobs:
         run: cmake --version
 
       - name: "Setup gil tool"
+        shell: cmd
         run: |
           pip3 install gil
           gil update
