--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -21,7 +21,10 @@ jobs:
           location: C:\msys64
           update: true
           install: >-
+            base-devel
             cmake
+            gcc
+            git
             python3-pip
 
       - name: "Setup cmake"
