--- a/.github/workflows/build-windows-cygwin.yml
+++ b/.github/workflows/build-windows-cygwin.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     defaults:
       run:
-        shell: C:\tools\cygwin\bin\bash.exe --login -lc '{0}'
+        shell: C:\tools\cygwin\bin\bash.exe --login -o igncr '{0}'
     steps:
       - name: "Setup git"
         shell: cmd
