Update GitHub build action

--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -22,10 +22,9 @@ jobs:
           update: true
           install: >-
             base-devel
-            cmake
-            gcc
             git
-            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-cmake
+            mingw-w64-x86_64-gcc
             python3-pip
 
       - name: "Setup cmake"
