--- a/.github/workflows/build-windows-msys2.yml
+++ b/.github/workflows/build-windows-msys2.yml
@@ -22,6 +22,7 @@ jobs:
           update: true
           install: >-
             base-devel
+            git
             mingw-w64-x86_64-cmake
             mingw-w64-x86_64-gcc
             python3-pip
